# GameEngine

./: .gitignore  Android.md  Cargo.toml  HowToCompile.md  README.md  index.html  index_test.html  programming_convention.md
engine/: Cargo.toml
engine/src/: lib.rs
engine_macro/: Cargo.toml
engine_macro/src/: lib.rs
math/: Cargo.toml  credit.txt
math/src/: lib.rs
math/src/math_core/: angle.rs  circle.rs  coordinate.rs  coordinate2.rs  coordinate3.rs  coordinate4.rs  floating.rs  map_on.rs  mod.rs  move_by.rs  number.rs  rectangle.rs  typedef.rs  zero_sized_number.rs
math/src/random/: dumb_random.rs  mod.rs  random.rs
math/src/tween/: easing.rs  mod.rs  tween.rs
math/src/tween/easing_fn/: back.rs  bounce.rs  elastic.rs  expo.rs  mewily.rs  mod.rs  sine.rs
math/src/various/: color.rs  color_hsl.rs  consumable.rs  grid.rs  mod.rs  time.rs  transform2d.rs
platformer/: Cargo.toml
platformer/src/: game.rs  lib.rs
platformer_graphique/: Cargo.toml
platformer_graphique/src/: game_graphique.rs  main.rs
util/: Cargo.toml
util/src/: langage_extension.rs  length.rs  lib.rs
util/src/console/: ansi_color.rs  mod.rs
util/src/container/: gen_vec.rs  last_stack.rs  mod.rs  table.rs
z/: Cargo.toml  credit.txt
z/src/: diagnostic.rs  lib.rs  runnable.rs
z/src/context/: assets.rs  camera.rs  camera_manager.rs  context.rs  input.rs  input_evo.rs  mod.rs  pen.rs  perf.rs  resource.rs
z/src/wrapper/: animation.rs  basic_wrapper.rs  font_wrapper.rs  icon.rs  image.rs  mod.rs  texture2d.rs  texture2d_draw.rs
