[package]
name = "z"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = { path = "../math" }
util = { path = "../util" }

macroquad = { version = "0.4.8", features = ["audio"] }
macroquad_macro = "0.1.8"
# quad-timestamp = "=0.1.2"

engine_macro = { path = "../engine_macro" }
